[package]
name = "egls"
version = "0.1.0"
authors = ["Varphone Wong <varphone@qq.com>"]
keywords = ["egl", "embedded", "graphics"]
description = "Embedded-System Graphics Library for Rust bindings"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/varphone/egls-rs.git"
homepage = "https://github.com/varphone/egls-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "^1.4.0", optional = true }

[build-dependencies]
gl_generator = "0.14.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.8", features = [ "libloaderapi" ] }

[target.'cfg(unix)'.dependencies]
libc = "^0.2.66"

[features]
default = []
hi3516ev200 = []
hi3516ev300 = []
hi3518ev200 = []
hi3518ev300 = []
hi3519av100 = []
hi3531v100 = []
hi3559av100 = [ "lazy_static" ]
